#Task30 Feat : Update main/Frequently-question (#71)
* Feat : update Frequently-question

* REFACTOR: Refactor format accordion

* REFACTOR: Refactor format accordion

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -327,6 +327,78 @@
 
     </section>
     <!-- Asked question -->
+    <section class="question pt-3 pt-lg-5 pb-3">
+      <div class="container">
+        <div class="row">
+          <h2 class="col-12 display-1 mt-5 mb-4">Frequently asked questions</h2>
+          <article class="question-article col d-lg-flex flex-lg-column align-items-lg-end">
+              <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
+                  <div class="accordion-item">
+                      <h4 class="accordion-header" id="panelsStayOpen-headingOne">
+                          <button class="accordion-button display-4" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                              How Does Yoora CRM Compare To The Competition?
+                          </button>
+                      </h4>
+                      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                          <div class="accordion-body fs-6">
+                              Yoora CRM offers the most affordable, comprehensive platform to manage the entire customer journey, from generating leads, to closing deals and supporting your customers. With a full suite of CRM, sales enablement, marketing automation, and help desk/customer support capabilities, it’s all you need to manage the entire customer lifecycle. Most of our competitors offer one or two of these functions as separate products, leaving you with the headache of integrating them and increasing the overall price point.
+                          </div>
+                      </div>
+                  </div>
+                  <div class="accordion-item">
+                      <h4 class="accordion-header" id="panelsStayOpen-headingTwo">
+                          <button class="accordion-button display-4 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                              Can I Change Plans Or Canc  el My Subscription At Any Time?
+                          </button>
+                      </h4>
+                      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                          aria-labelledby="panelsStayOpen-headingTwo">
+                          <div class="accordion-body fs-6">
+                              Yoora CRM offers the most affordable, comprehensive platform to manage the entire customer journey, from generating leads, to closing deals and supporting your customers. With a full suite of CRM, sales enablement, marketing automation, and help desk/customer support capabilities, it’s all you need to manage the entire customer lifecycle. Most of our competitors offer one or two of these functions as separate products, leaving you with the headache of integrating them and increasing the overall price point.
+                          </div>
+                      </div>
+                  </div>
+                  <div class="accordion-item">
+                      <h4 class="accordion-header" id="panelsStayOpen-headingThree">
+                          <button class="accordion-button display-4 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                              How Secure Is My Data With Yoora CRM?
+                          </button>
+                      </h4>
+                      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                          <div class="accordion-body fs-6">
+                              Yoora CRM offers the most affordable, comprehensive platform to manage the entire customer journey, from generating leads, to closing deals and supporting your customers. With a full suite of CRM, sales enablement, marketing automation, and help desk/customer support capabilities, it’s all you need to manage the entire customer lifecycle. Most of our competitors offer one or two of these functions as separate products, leaving you with the headache of integrating them and increasing the overall price point.
+                          </div>
+                      </div>
+                  </div>
+                  <div class="accordion-item">
+                      <h4 class="accordion-header" id="panelsStayOpen-headingFour">
+                          <button class="accordion-button display-4 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
+                              What Is The Uptime Guarantee?
+                          </button>
+                      </h4>
+                      <div id="panelsStayOpen-collapsefour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
+                          <div class="accordion-body fs-6">
+                              Yoora CRM offers the most affordable, comprehensive platform to manage the entire customer journey, from generating leads, to closing deals and supporting your customers. With a full suite of CRM, sales enablement, marketing automation, and help desk/customer support capabilities, it’s all you need to manage the entire customer lifecycle. Most of our competitors offer one or two of these functions as separate products, leaving you with the headache of integrating them and increasing the overall price point.
+                          </div>
+                      </div>
+                  </div>
+                  <div class="accordion-item">
+                      <h4 class="accordion-header" id="panelsStayOpen-heading">
+                          <button class="accordion-button display-4 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
+                              How Can I Add More Emails To My Account?
+                          </button>
+                      </h4>
+                      <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
+                          <div class="accordion-body fs-6">
+                              Yoora CRM offers the most affordable, comprehensive platform to manage the entire customer journey, from generating leads, to closing deals and supporting your customers. With a full suite of CRM, sales enablement, marketing automation, and help desk/customer support capabilities, it’s all you need to manage the entire customer lifecycle. Most of our competitors offer one or two of these functions as separate products, leaving you with the headache of integrating them and increasing the overall price point.
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </article>
+        </div>
+    </div>
+  </section>
   </main>
 
   <!-------------------
