--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -329,7 +329,7 @@
     <!-- Asked question -->
     <section class="question pt-3 pt-lg-5 pb-3">
       <div class="container">
-        <div class="row">
+        <div class="row flex-column">
           <h2 class="col-12 display-1 mt-5 mb-4">Frequently asked questions</h2>
           <article class="question-article col d-lg-flex flex-lg-column align-items-lg-end">
               <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
