REFACTOR: Refactor format accordion

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -422,8 +422,7 @@
                 </a>
               </h1>
               <p class="fs-5 text-white-50 pt-3 text-md">
-                Ask about Yoora products, pricing, implementation, or anything else.
-                Our highly trained reps are standing by, ready to help.
+                Ask about Yoora products, pricing, implementation, or anything else.Our highly trained reps are standing by, ready to help.
               </p>
             </div>
           </div>
