--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -413,7 +413,7 @@
     <!-- CTA -->
     <section class="cta d-lg-flex justify-content-center align-items-md-center">
       <div class="row row-cols-lg-2 d-lg-flex align-items-center justify-content-center">
-        <div class="col col-lg-7">
+        <div class="col-12 col-lg-7">
           <div class="cta-content">
             <div class="container">
               <h1 class="display-1" href="#">
@@ -427,11 +427,13 @@
             </div>
           </div>
         </div>
-        <div class="cta-button col-12 col-lg-3 d-flex justify-content-center align-items-center">
-          <button class="btn btn-primary">
-            Try For Free
-          </button>
-          <span class="fs-6 text-white pt-4">Full access. No credit card required.</span>
+        <div class="col-12 col-lg-3 ">
+          <div class="cta-button d-flex justify-content-center align-items-center">
+            <button class="btn btn-primary">
+              Try For Free
+            </button>
+            <span class="fs-6 text-white pt-4">Full access. No credit card required.</span>
+          </div>
         </div>
       </div>
     </section>
