--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -415,7 +415,7 @@
       <div class="container-lg">
         <div class="row row-cols-lg-2 d-lg-flex align-items-center justify-content-center">
           <div class="col-12 col-lg-7">
-            <div class="cta-content">
+            <div class="cta-content p-5 p-lg-0">
                 <h1 class="display-1" href="#">
                   <a href="#" class="text-white">
                     Ready to supercharge your business?
