--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -160,20 +160,22 @@
     --------------------->
     <section class="service">
         <div class="container">
-            <div class="service-left card">
-                <h5 class="card-header">SERVICE</h5>
-                <div class="card-body">
-                    <h1 class="card-text">
-                        CRM insights: Selecting the Right One for Your Organization
-                    </h1>
-                </div>
-                <h4 class="card-footer">
-                    05 Sep 2022, <span class="text-black-50">by Joshua Nash</span>
-                </h4>
-            </div>
-            <div class="service-right">
-                <img src="./img/service__img.png" alt="This is the service's photo" class="service-img">
-            </div>
+          <div class="row row-cols-md-2 gap-2 gap-lg-4 flex-md-nowrap">
+            <div class="service-left card col-12 col-md-6 mb-md-0">
+              <h5 class="card-header">SERVICE</h5>
+              <div class="card-body">
+                  <h1 class="card-text">
+                      CRM insights: Selecting the Right One for Your Organization
+                  </h1>
+              </div>
+              <h4 class="card-footer">
+                  05 Sep 2022, <span class="text-black-50">by Joshua Nash</span>
+              </h4>
+          </div>
+          <div class="service-right col-12 col-md-6">
+              <img src="./img/service__img.png" alt="This is the service's photo" class="service-img">
+          </div>
+          </div>
         </div>
     </section>
 
@@ -190,103 +192,110 @@
     --------------------->
     <section class="product">
         <div class="container">
-            <div class="product-content">
-                <div class="card card-img">
-                    <h5 class="card-header">New</h5>
-                    <picture>
-                        <!-- mobile -->
-                        <source media="(max-width:768px)" srcset="./img/product_img1-0.5x.jpg ">
-                        <!-- desktop -->
-                        <source media="(min-width:768px)" srcset="./img/product_img1-1.5x.jpg ">
-                        <img src="./img/product_img1-1.5x.jpg" alt="Here is a photo of the product title above"
-                            class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
-                    </picture>
-                    <div class="card-body">
-                        <h3>
-                            <a class="card-text" href="#">
-                                How To Deliver a Successful Product Launch
-                            </a>
-                        </h3>
-                    </div>
-                    <h4 class="card-footer">29 Jun 2022,<span class="text-black-50">by joshua Nash</span> </h4>
+            <div class="product-content row row-cols-md-2 row-cols-lg-3 ">
+              <div class="col-12 d-flex">
+                <div class="card card-img  ">
+                  <h5 class="card-header">New</h5>
+                  <picture>
+                      <!-- mobile -->
+                      <source media="(max-width:768px)" srcset="./img/product_img1-0.5x.jpg ">
+                      <!-- desktop -->
+                      <source media="(min-width:768px)" srcset="./img/product_img1-1.5x.jpg ">
+                      <img src="./img/product_img1-1.5x.jpg" alt="Here is a photo of the product title above"
+                          class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                  </picture>
+                  <div class="card-body">
+                      <h3>
+                          <a class="card-text" href="#">
+                              How To Deliver a Successful Product Launch
+                          </a>
+                      </h3>
+                  </div>
+                  <h4 class="card-footer">29 Jun 2022,<span class="text-black-50">by joshua Nash</span> </h4>
                 </div>
+              </div>
 
-                <div class="card card-img">
-                    <h5 class="card-header">Sales</h5>
-                    <picture>
-                        <!-- mobile -->
-                        <source media="(max-width:768px)" srcset="./img/product_img2-0.5.jpg">
-                        <!-- desktop -->
-                        <source media="(min-width:768px)" srcset="./img/product_img2-1.5.jpg ">
-                        <img src="./img/product_img2-1.5.jpg" alt="Here is a photo of the product title above"
-                            class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
-                    </picture>
-                    <div class="card-body">
-                        <h3>
-                            <a class="card-text" href="#">
-                                The best cities for sales careers in 2022
-                            </a>
-                        </h3>
-                    </div>
-                    <h4 class="card-footer">20 Mar 2022, <span class="text-black-50">by Bill Holloway</span></h4>
+              <div class="col-12 d-flex">
+                <div class="card card-img  ">
+                  <h5 class="card-header">Sales</h5>
+                  <picture>
+                      <!-- mobile -->
+                      <source media="(max-width:768px)" srcset="./img/product_img2-0.5.jpg">
+                      <!-- desktop -->
+                      <source media="(min-width:768px)" srcset="./img/product_img2-1.5.jpg ">
+                      <img src="./img/product_img2-1.5.jpg" alt="Here is a photo of the product title above"
+                          class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                  </picture>
+                  <div class="card-body">
+                      <h3>
+                          <a class="card-text" href="#">
+                              The best cities for sales careers in 2022
+                          </a>
+                      </h3>
+                  </div>
+                  <h4 class="card-footer">20 Mar 2022, <span class="text-black-50">by Bill Holloway</span></h4>
                 </div>
-
-                <div class="card card-img">
-                    <h5 class="card-header">Sales</h5>
-                    <img src="./img/product__item3.png" alt="Here is a photo of the product title above"
-                        class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
-                    <div class="card-body">
-                        <h3>
-                            <a class="card-text" href="#">
-                                How to use 360 feedback to improve sales performance
-                            </a>
-                        </h3>
-                    </div>
-                    <h4 class="card-footer">07 Jun 2022, <span class="text-black-50">by Stephen Henderson</span>
+              </div>
+              <div class="col-12 d-flex">
+                <div class="card card-img ">
+                  <h5 class="card-header">Sales</h5>
+                  <img src="./img/product__item3.png" alt="Here is a photo of the product title above"
+                      class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
+                  <div class="card-body">
+                      <h3>
+                          <a class="card-text" href="#">
+                              How to use 360 feedback to improve sales performance
+                          </a>
+                      </h3>
+                  </div>
+                  <h4 class="card-footer">07 Jun 2022, <span class="text-black-50">by Stephen Henderson</span>
                 </div>
-
-                <div class="card card-img">
-                    <h5 class="card-header">Sales</h5>
-                    <img src="./img/product__item4.png" alt="Here is a photo of the product title above"
-                        class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
-                    <div class="card-body">
-                        <h3>
-                            <a class="card-text" href="#">
-                                The Challenger Sale model: How to lead the conversation
-                            </a>
-                        </h3>
-                    </div>
-                    <h4 class="card-footer">09 Jan 2022,<span class="text-black-50">by joshua Nash</span> </h4>
+              </div>
+              <div class="col-12 d-flex">
+                <div class="card card-img  ">
+                  <h5 class="card-header">Sales</h5>
+                  <img src="./img/product__item4.png" alt="Here is a photo of the product title above"
+                      class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
+                  <div class="card-body">
+                      <h3>
+                          <a class="card-text" href="#">
+                              The Challenger Sale model: How to lead the conversation
+                          </a>
+                      </h3>
+                  </div>
+                  <h4 class="card-footer">09 Jan 2022,<span class="text-black-50">by joshua Nash</span> </h4>
                 </div>
-
-                <div class="card card-img">
-                    <h5 class="card-header">Product</h5>
-                    <img src="./img/product__item5.png" alt="Here is a photo of the product title above"
-                        class="card-img-top" sizes="(min-width: 66em) 33vw,  (min-width: 44em) 50vw, 100vw ">
-                    <div class="card-body">
-                        <h3>
-                            <a class="card-text" href="#">
-                                3 ways To automate your lead generation process with Yoora
-                            </a>
-                        </h3>
-                    </div>
-                    <h4 class="card-footer">08 Jul 2022, <span class="text-black-50"> Leroy Figueroa</span> </h4>
+              </div>
+              <div class="col-12 d-flex">
+                <div class="card card-img  ">
+                  <h5 class="card-header">Product</h5>
+                  <img src="./img/product__item5.png" alt="Here is a photo of the product title above"
+                      class="card-img-top" sizes="(min-width: 66em) 33vw,  (min-width: 44em) 50vw, 100vw ">
+                  <div class="card-body">
+                      <h3>
+                          <a class="card-text" href="#">
+                              3 ways To automate your lead generation process with Yoora
+                          </a>
+                      </h3>
+                  </div>
+                  <h4 class="card-footer">08 Jul 2022, <span class="text-black-50"> Leroy Figueroa</span> </h4>
                 </div>
-
-                <div class="card card-img">
-                    <h5 class="card-header">Product</h5>
-                    <img src="./img/product__item6.png" alt="Here is a photo of the product title above"
-                        class="card-img-top" sizes="(min-width: 66em) 100vw,  (min-width: 44em) 20vw, 100vw ">
-                    <div class="card-body">
-                        <h3>
-                            <a class="card-text" href="#">
-                                Marketplace Monthly Apps Spotlight: Aug 2022
-                            </a>
-                        </h3>
-                    </div>
-                    <h4 class="card-footer">05 Aug 2022,<span class="text-black-50">by joshua Nash</span> </h4>
+              </div>
+              <div class="col-12 d-flex">
+                <div class="card card-img  ">
+                  <h5 class="card-header">Product</h5>
+                  <img src="./img/product__item6.png" alt="Here is a photo of the product title above"
+                      class="card-img-top" sizes="(min-width: 66em) 100vw,  (min-width: 44em) 20vw, 100vw ">
+                  <div class="card-body">
+                      <h3>
+                          <a class="card-text" href="#">
+                              Marketplace Monthly Apps Spotlight: Aug 2022
+                          </a>
+                      </h3>
+                  </div>
+                  <h4 class="card-footer">05 Aug 2022,<span class="text-black-50">by joshua Nash</span> </h4>
                 </div>
-
+              </div>
             </div>
         </div>
     </section>
