Fix : Fix grid system marketing

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -310,68 +310,70 @@
      Marketing section
     --------------------->
     <section class="marketing">
-        <div class="container">
-            <div class="marketing-content">
-                    <div class="card card-img">
-                        <h5 class="card-header">Marketing</h5>
-                        <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw" >
-                        <div class="card-body">
-                            <h3 class="card-text">
-                                Email marketing best practices: 10 experts share their email tips
-                            </h3>
-                        </div>
-                        <h4 class="card-footer">
-                            23 Nov 2022,
-                            <span class="text-black-50">by joshua Nash</span>
-                        </h4>
-                    </div>
-
-                    <div class="card card-horizontal">
-                        <div class="card-horizontal-left">
-                            <div class="card-body">
-                                <h3 class="card-text">
-                                    Access Yoora’s leads features on your mobile
-                                </h3>
-                            </div>
-                            <h4 class="card-footer">
-                                11 Aug 2022,
-                                <span class="text-black-50">by joshua Nash</span>
-                            </h4>
-                        </div>
-                        <h5 class="card-header">PRODUCT</h5>
-                    </div>
-                    <div class="card card-horizontal">
-                        <div class="card-horizontal-left">
-                            <div class="card-body">
-                                <h3 class="card-text">
-                                    Sales presentations: templates, examples and ideas on how to present like a pro
-                                </h3>
-                            </div>
-                            <h4 class="card-footer">
-                                11 Oct 2022,
-                                <span class="text-black-50"> by Laura Ryan</span>
-                            </h4>
-                        </div>
-                        <h5 class="card-header">SALES</h5>
-                    </div>
-
-                    <div class="card card-horizontal">
-                        <div class="card-horizontal-left">
-                            <div class="card-body">
-                                <h3 class="card-text">
-                                    How To Deliver a Successful Product Launch
-                                </h3>
-                            </div>
-                            <h4 class="card-footer">
-                                30 Jan 2022,
-                                <span class="text-black-50"> by Alice Washington</span>
-                            </h4>
-                        </div>
-                        <h5 class="card-header">NEWS</h5>
-                    </div>
+      <div class="container">
+        <div class="marketing-content row row-cols-lg-2">
+          <div class="col-12 d-flex">
+            <div class="card card-img">
+              <h5 class="card-header">Marketing</h5>
+              <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above" class="card-img-top"
+                sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+              <div class="card-body">
+                <h3 class="card-text">
+                  Email marketing best practices: 10 experts share their email tips
+                </h3>
+              </div>
+              <h4 class="card-footer">
+                23 Nov 2022,
+                <span class="text-black-50">by joshua Nash</span>
+              </h4>
+            </div>
+          </div>
+          <div class="col-12 d-flex flex-column ">
+            <div class="card card-horizontal">
+              <div class="card-horizontal-left">
+                <div class="card-body">
+                  <h3 class="card-text">
+                    Access Yoora’s leads features on your mobile
+                  </h3>
                 </div>
-
+                <h4 class="card-footer">
+                  11 Aug 2022,
+                  <span class="text-black-50">by joshua Nash</span>
+                </h4>
+              </div>
+              <h5 class="card-header">PRODUCT</h5>
+            </div>
+            <div class="card card-horizontal">
+              <div class="card-horizontal-left">
+                <div class="card-body">
+                  <h3 class="card-text">
+                    Sales presentations: templates, examples and ideas on how to present like a pro
+                  </h3>
+                </div>
+                <h4 class="card-footer">
+                  11 Oct 2022,
+                  <span class="text-black-50"> by Laura Ryan</span>
+                </h4>
+              </div>
+              <h5 class="card-header">SALES</h5>
+            </div>
+            <div class="card card-horizontal">
+              <div class="card-horizontal-left">
+                <div class="card-body">
+                  <h3 class="card-text">
+                    How To Deliver a Successful Product Launch
+                  </h3>
+                </div>
+                <h4 class="card-footer">
+                  30 Jan 2022,
+                  <span class="text-black-50"> by Alice Washington</span>
+                </h4>
+              </div>
+              <h5 class="card-header">NEWS</h5>
+            </div>
+          </div>
         </div>
+      </div>
 
     </section>
     <!-------------------
