--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -158,25 +158,27 @@
     <!-------------------
      Service section
     --------------------->
-    <section class="service">
-        <div class="container">
-          <div class="row row-cols-md-2 gap-2 gap-lg-4 flex-md-nowrap">
-            <div class="service-left card col-12 col-md-6 mb-md-0">
+    <section class="service ">
+      <div class="container">
+        <div class="row row-cols-md-2 gap-2 gap-lg-4 flex-md-nowrap">
+          <div class="service-left  col-12 col-md-6 mb-md-0">
+            <div class="card">
               <h5 class="card-header">SERVICE</h5>
               <div class="card-body">
-                  <h1 class="card-text">
-                      CRM insights: Selecting the Right One for Your Organization
-                  </h1>
+                <h1 class="card-text">
+                  CRM insights: Selecting the Right One for Your Organization
+                </h1>
               </div>
               <h4 class="card-footer">
-                  05 Sep 2022, <span class="text-black-50">by Joshua Nash</span>
+                05 Sep 2022, <span class="text-black-50">by Joshua Nash</span>
               </h4>
+            </div>
           </div>
           <div class="service-right col-12 col-md-6">
-              <img src="./img/service__img.png" alt="This is the service's photo" class="service-img">
-          </div>
+            <img src="./img/service__img.png" alt="This is the service's photo" class="service-img">
           </div>
         </div>
+      </div>
     </section>
 
     <!-------------------
@@ -192,7 +194,7 @@
     --------------------->
     <section class="product">
         <div class="container">
-            <div class="product-content row row-cols-md-2 row-cols-lg-3 ">
+            <div class="product-content row row-cols-md-2 row-cols-lg-3 gap-4">
               <div class="col-12 d-flex">
                 <div class="card card-img  ">
                   <h5 class="card-header">New</h5>
@@ -312,7 +314,7 @@
     <section class="marketing">
       <div class="container">
         <div class="marketing-content row row-cols-lg-2">
-          <div class="col-12 d-flex">
+          <div class="col-12 d-flex mb-5 mb-lg-0">
             <div class="card card-img">
               <h5 class="card-header">Marketing</h5>
               <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above" class="card-img-top"
@@ -328,7 +330,7 @@
               </h4>
             </div>
           </div>
-          <div class="col-12 d-flex flex-column ">
+          <div class="col-12 d-flex flex-column gap-4 ">
             <div class="card card-horizontal">
               <div class="card-horizontal-left">
                 <div class="card-body">
