--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -329,7 +329,7 @@
     <!-- Asked question -->
     <section class="question pt-3 pt-lg-5 pb-3">
       <div class="container">
-        <div class="row">
+        <div class="row flex-column">
           <h2 class="col-12 display-1 mt-5 mb-4">Frequently asked questions</h2>
           <article class="question-article col d-lg-flex flex-lg-column align-items-lg-end">
               <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
@@ -404,6 +404,43 @@
   <!-------------------
      main end
     --------------------->
+
+
+  <!-------------------
+       footer
+    --------------------->
+  <footer class="footer pt-3 pt-lg-5 pb-3">
+    <!-- CTA -->
+    <section class="cta d-lg-flex justify-content-center align-items-md-center">
+      <div class="container-lg">
+        <div class="row row-cols-lg-2 d-lg-flex align-items-center justify-content-center">
+          <div class="col-12 col-lg-7">
+            <div class="cta-content p-5 p-lg-0">
+                <h1 class="display-1" href="#">
+                  <a href="#" class="text-white">
+                    Ready to supercharge your business?
+                  </a>
+                </h1>
+                <p class="fs-5 text-white-50 pt-3 text-md">
+                  Ask about Yoora products, pricing, implementation, or anything else.Our highly trained reps are standing by, ready to help.
+                </p>
+            </div>
+          </div>
+          <div class="col-12 col-lg-3 ">
+            <div class="cta-button d-flex justify-content-center align-items-center">
+              <button class="btn btn-primary">
+                Try For Free
+              </button>
+              <span class="fs-6 text-white pt-4">Full access. No credit card required.</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </footer>
+  <!-------------------
+       footer end
+      --------------------->
   <!-- Script -->
 
     <!-- jquery/thu vien ho tro -->
