--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -437,6 +437,113 @@
         </div>
       </div>
     </section>
+    <!-- navigation -->
+    <section class="navigation mt-5">
+      <div class="container">
+        <!-- link -->
+        <div class="row row-cols-lg-3">
+          <!-- media -->
+          <div class="col-12 col-lg-4">
+            <div class="card p-0">
+              <div class="card-header mt-3 mt-lg-0">
+                <a href="#" class="logo">
+                  <img src="./img/logo.png" alt="logo">
+                </a>
+              </div>
+              <div class="card-body mt-3">
+                <p class="fs-6">
+                  We built an elegant solution.<br> Our team created a fully integrated sales<br> and marketing solution for SMBs
+                </p>
+              </div>
+              <div class="card-footer mt-3">
+                <ul class="d-flex ">
+                  <li>
+                    <a class="me-3" href="https://twitter.com/"><img src="./img/Twitter.png" alt="Here is a logo of the media above"></a>
+                  </li>
+                  <li>
+                    <a class="me-3" href="https://www.facebook.com/"> <img src="./img/Facebook.png" alt="Here is a logo of the media above"></a>
+                  </li>
+                  <li>
+                    <a href="https://www.linkedin.com/"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above"></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <!-- navigation link -->
+          <div class="col-12 col-lg-8 mt-5 mt-lg-0 ">
+            <div class="row row-cols-3 gap-5 gap-lg-0 justify-content-lg-between mb-lg-5">
+              <ul class="col-12 col-lg-3 w-auto">
+                <div class=" row gap-3 flex-lg-column">
+                  <a href="#" class="fs-5">Company</a>
+                  <li><a class="fs-6" href="#">About</a></li>
+                  <li><a class="fs-6" href="#">Pricing</a></li>
+                  <li><a class="fs-6" href="#">Jobs</a></li>
+                  <li><a class="fs-6" href="#">Blog</a></li>
+                  <li><a class="fs-6" href="#">Careers</a></li>
+                </div>
+              </ul>
+              <ul class="col-12 cols-lg-3 w-auto ">
+                <div class=" row gap-3 flex-lg-column">
+                  <a href="#" class="fs-5">Product</a>
+                  <li><a class="fs-6" href="#">Sales software</a></li>
+                  <li><a class="fs-6" href="#">Features</a></li>
+                  <li><a class="fs-6" href="#">Privacy and security</a></li>
+                  <li><a class="fs-6" href="#">Marketplace</a></li>
+                  <li><a class="fs-6" href="#">Status</a></li>
+                  <li><a class="fs-6" href="#">API</a></li>
+                </div>
+              </ul>
+              <ul class="col-12 cols-lg-3 w-auto">
+                <div class=" row gap-3 flex-lg-column">
+                  <a href="#" class="fs-5">Discover</a>
+                  <li><a class="fs-6" href="#">Partner Program</a></li>
+                  <li><a class="fs-6" href="#">Get our newsletter</a></li>
+                  <li><a class="fs-6" href="#">Sales Pipeline Course</a></li>
+                  <li><a class="fs-6" href="#">What is CRM?</a></li>
+                  <li><a class="fs-6" href="#">CRM Comparison</a></li>
+                  <li><a class="fs-6" href="#">Resources</a></li>
+                </div>
+              </ul>
+              <ul class="col-12 cols-lg-3 w-auto">
+                <div class="row gap-3 flex-lg-column">
+                  <a href="#" class="fs-5">Help Center</a>
+                  <li><a class="fs-6" href="#">Community</a></li>
+                  <li><a class="fs-6" href="#">Knowledge Base</a></li>
+                  <li><a class="fs-6" href="#">Academy</a></li>
+                  <li><a class="fs-6" href="#">Support</a></li>
+                </div>
+              </ul>
+            </div>
+          </div>
+          <!-- copyright -->
+          <div class="col-12 col-lg-12 mt-2 ">
+            <hr class="divider mt-lg-5 mb-lg-5">
+            <div class="row row-cols-lg-3 align-items-center justify-content-start gap-4 gap-lg-0">
+              <div class="col-12 col-lg-4">
+                <h3 class="fs-6 ">
+                  <a class="text-black-50" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
+                </h3>
+              </div>
+              <ul class="col-12 col-lg-4  ">
+                <div class="row gap-3 d-lg-flex flex-column flex-lg-row flex-lg-nowrap ">
+                  <li class="w-auto"><a class="fs-6" href="#">Terms of Service</a></li>
+                  <li class="w-auto"><a class="fs-6" href="#">Privacy Police</a></li>
+                  <li class="w-auto"><a class="fs-6" href="#">Cookie</a></li>
+                </div>
+              </ul>
+              <div class="col-12 col-lg-4 d-flex justify-content-lg-end ">
+                <i class="bi bi-globe2"></i>
+                <select class="btn p-0 fs-6" name="language" id="language">
+                  <option value="volvo">English</option>
+                  <option value="saab">Vietnamese</option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </footer>
   <!-------------------
        footer end
