Style : Sytle text color fs-.

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -475,43 +475,43 @@
             <div class="row row-cols-3 gap-5 gap-lg-0 justify-content-lg-between mb-lg-5">
               <ul class="col-12 col-lg-3 w-auto">
                 <div class="row gap-3 flex-lg-column">
-                  <a href="#" class="fs-5">Company</a>
-                  <li><a class="fs-6" href="#">About</a></li>
-                  <li><a class="fs-6" href="#">Pricing</a></li>
-                  <li><a class="fs-6" href="#">Jobs</a></li>
-                  <li><a class="fs-6" href="#">Blog</a></li>
-                  <li><a class="fs-6" href="#">Careers</a></li>
+                  <a href="#" class="fs-5 text-black">Company</a>
+                  <li><a class="fs-6 text-black" href="#">About</a></li>
+                  <li><a class="fs-6 text-black" href="#">Pricing</a></li>
+                  <li><a class="fs-6 text-black" href="#">Jobs</a></li>
+                  <li><a class="fs-6 text-black" href="#">Blog</a></li>
+                  <li><a class="fs-6 text-black" href="#">Careers</a></li>
                 </div>
               </ul>
               <ul class="col-12 cols-lg-3 w-auto ">
                 <div class="row gap-3 flex-lg-column">
-                  <a href="#" class="fs-5">Product</a>
-                  <li><a class="fs-6" href="#">Sales software</a></li>
-                  <li><a class="fs-6" href="#">Features</a></li>
-                  <li><a class="fs-6" href="#">Privacy and security</a></li>
-                  <li><a class="fs-6" href="#">Marketplace</a></li>
-                  <li><a class="fs-6" href="#">Status</a></li>
-                  <li><a class="fs-6" href="#">API</a></li>
+                  <a href="#" class="fs-5 text-black">Product</a>
+                  <li><a class="fs-6 text-black" href="#">Sales software</a></li>
+                  <li><a class="fs-6 text-black" href="#">Features</a></li>
+                  <li><a class="fs-6 text-black" href="#">Privacy and security</a></li>
+                  <li><a class="fs-6 text-black" href="#">Marketplace</a></li>
+                  <li><a class="fs-6 text-black" href="#">Status</a></li>
+                  <li><a class="fs-6 text-black" href="#">API</a></li>
                 </div>
               </ul>
               <ul class="col-12 cols-lg-3 w-auto">
                 <div class="row gap-3 flex-lg-column">
-                  <a href="#" class="fs-5">Discover</a>
-                  <li><a class="fs-6" href="#">Partner Program</a></li>
-                  <li><a class="fs-6" href="#">Get our newsletter</a></li>
-                  <li><a class="fs-6" href="#">Sales Pipeline Course</a></li>
-                  <li><a class="fs-6" href="#">What is CRM?</a></li>
-                  <li><a class="fs-6" href="#">CRM Comparison</a></li>
-                  <li><a class="fs-6" href="#">Resources</a></li>
+                  <a href="#" class="fs-5 text-black">Discover</a>
+                  <li><a class="fs-6 text-black" href="#">Partner Program</a></li>
+                  <li><a class="fs-6 text-black" href="#">Get our newsletter</a></li>
+                  <li><a class="fs-6 text-black" href="#">Sales Pipeline Course</a></li>
+                  <li><a class="fs-6 text-black" href="#">What is CRM?</a></li>
+                  <li><a class="fs-6 text-black" href="#">CRM Comparison</a></li>
+                  <li><a class="fs-6 text-black" href="#">Resources</a></li>
                 </div>
               </ul>
               <ul class="col-12 cols-lg-3 w-auto">
                 <div class="row gap-3 flex-lg-column">
-                  <a href="#" class="fs-5">Help Center</a>
-                  <li><a class="fs-6" href="#">Community</a></li>
-                  <li><a class="fs-6" href="#">Knowledge Base</a></li>
-                  <li><a class="fs-6" href="#">Academy</a></li>
-                  <li><a class="fs-6" href="#">Support</a></li>
+                  <a href="#" class="fs-5 text-black">Help Center</a>
+                  <li><a class="fs-6 text-black" href="#">Community</a></li>
+                  <li><a class="fs-6 text-black" href="#">Knowledge Base</a></li>
+                  <li><a class="fs-6 text-black" href="#">Academy</a></li>
+                  <li><a class="fs-6 text-black" href="#">Support</a></li>
                 </div>
               </ul>
             </div>
@@ -521,20 +521,20 @@
             <hr class="divider mt-lg-5 mb-lg-5">
             <div class="row row-cols-lg-3 align-items-center justify-content-start gap-4 gap-lg-0">
               <div class="col-12 col-lg-4">
-                <h3 class="fs-6 ">
+                <h3 class="fs-6 text-black ">
                   <a class="text-black-50" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
                 </h3>
               </div>
               <ul class="col-12 col-lg-4  ">
                 <div class="row gap-3 d-lg-flex flex-column flex-lg-row flex-lg-nowrap ">
-                  <li class="w-auto"><a class="fs-6" href="#">Terms of Service</a></li>
-                  <li class="w-auto"><a class="fs-6" href="#">Privacy Police</a></li>
-                  <li class="w-auto"><a class="fs-6" href="#">Cookie</a></li>
+                  <li class="w-auto"><a class="fs-6 text-black" href="#">Terms of Service</a></li>
+                  <li class="w-auto"><a class="fs-6 text-black" href="#">Privacy Police</a></li>
+                  <li class="w-auto"><a class="fs-6 text-black" href="#">Cookie</a></li>
                 </div>
               </ul>
               <div class="col-12 col-lg-4 d-flex justify-content-lg-end ">
                 <i class="bi bi-globe2"></i>
-                <select class="btn p-0 fs-6" name="language" id="language">
+                <select class="btn p-0 fs-6 text-black" name="language" id="language">
                   <option value="volvo">English</option>
                   <option value="saab">Vietnamese</option>
                 </select>
