--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -71,7 +71,7 @@
     --------------------->
     <main class="main">
       <!-- introduce -->
-      <section class="main-introduce pt-3 pt-lg-5 pb-3">
+      <section class="main-introduce pt-3 pt-lg-5 pb-3 pb-lg-4">
           <div class="container">
               <div class=" row-cols-lg-2 d-lg-flex justify-content-between align-items-end  " tabindex="-1">
                   <h1 class="display-1 col-md-7 col-lg-6 text-black-50 pb-3 pb-lg-0">
@@ -99,8 +99,8 @@
                 </p>
               </div>
               <!-- card-body -->
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title mb-3">
+              <div class="card-body pb-lg-3">
+                <h1 class="card-title pricing-card-title mb-3 pt-lg-4">
                   <strong class="display-1"> $8,90 </strong>
                   <small class="text-muted">/month</small>
                 </h1>
@@ -178,8 +178,8 @@
                 </p>
               </div>
               <!-- card-body -->
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title mb-3">
+              <div class="card-body pb-lg-3">
+                <h1 class="card-title pricing-card-title mb-3 pt-lg-4">
                   <strong class="display-1">$29,90 </strong>
                   <small class="text-muted">/month</small>
                 </h1>
@@ -249,8 +249,8 @@
                 </p>
               </div>
               <!-- card-body -->
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title mb-3">
+              <div class="card-body pb-lg-3">
+                <h1 class="card-title pricing-card-title mb-3 pt-lg-4">
                   <strong class="display-1">$39,90 </strong>
                   <small class="text-muted">/month</small>
                 </h1>
@@ -333,7 +333,7 @@
           <h2 class="col-12 display-1 mt-5 mb-4">Frequently asked questions</h2>
           <article class="question-article col d-lg-flex flex-lg-column align-items-lg-end">
               <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
-                  <div class="accordion-item">
+                  <div class="accordion-item pt-lg-4 pb-lg-4">
                       <h4 class="accordion-header" id="panelsStayOpen-headingOne">
                           <button class="accordion-button display-4" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
                               How Does Yoora CRM Compare To The Competition?
@@ -345,7 +345,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="accordion-item">
+                  <div class="accordion-item pt-lg-4 pb-lg-4">
                       <h4 class="accordion-header" id="panelsStayOpen-headingTwo">
                           <button class="accordion-button display-4 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
                               Can I Change Plans Or Canc  el My Subscription At Any Time?
@@ -358,7 +358,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="accordion-item">
+                  <div class="accordion-item pt-lg-4 pb-lg-4">
                       <h4 class="accordion-header" id="panelsStayOpen-headingThree">
                           <button class="accordion-button display-4 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
                               How Secure Is My Data With Yoora CRM?
@@ -370,7 +370,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="accordion-item">
+                  <div class="accordion-item pt-lg-4 pb-lg-4">
                       <h4 class="accordion-header" id="panelsStayOpen-headingFour">
                           <button class="accordion-button display-4 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
                               What Is The Uptime Guarantee?
@@ -382,7 +382,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="accordion-item">
+                  <div class="accordion-item pt-lg-4 pb-lg-4">
                       <h4 class="accordion-header" id="panelsStayOpen-heading">
                           <button class="accordion-button display-4 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
                               How Can I Add More Emails To My Account?
