Style : update div in ul

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg row-cols-lg-2 py-3">
         <a class="navbar-brand me-5 col-lg-auto" href="../practice-02/index.html">
-          <img src="./img/logo.png" alt="logo" />
+          <img src="./img/logo.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
           aria-controls="offcanvasNavbar">
@@ -416,7 +416,7 @@
         <div class="row row-cols-lg-2 d-lg-flex align-items-center justify-content-center">
           <div class="col-12 col-lg-7">
             <div class="cta-content p-5 p-lg-0">
-                <h1 class="display-1" href="#">
+                <h1 class="display-1">
                   <a href="#" class="text-white">
                     Ready to supercharge your business?
                   </a>
@@ -473,18 +473,18 @@
           <!-- navigation link -->
           <div class="col-12 col-lg-8 mt-5 mt-lg-0 ">
             <div class="row row-cols-3 gap-5 gap-lg-0 justify-content-lg-between mb-lg-5">
-              <ul class="col-12 col-lg-3 w-auto">
-                <div class="row gap-3 flex-lg-column">
+              <div class="col-12 col-lg-3 w-auto ">
+                <ul class="row gap-3 flex-lg-column">
                   <a href="#" class="fs-5 text-black">Company</a>
                   <li><a class="fs-6 text-black" href="#">About</a></li>
                   <li><a class="fs-6 text-black" href="#">Pricing</a></li>
                   <li><a class="fs-6 text-black" href="#">Jobs</a></li>
                   <li><a class="fs-6 text-black" href="#">Blog</a></li>
                   <li><a class="fs-6 text-black" href="#">Careers</a></li>
-                </div>
-              </ul>
-              <ul class="col-12 cols-lg-3 w-auto ">
-                <div class="row gap-3 flex-lg-column">
+                </ul>
+              </div>
+              <div class="col-12 cols-lg-3 w-auto ">
+                <ul class="row gap-3 flex-lg-column">
                   <a href="#" class="fs-5 text-black">Product</a>
                   <li><a class="fs-6 text-black" href="#">Sales software</a></li>
                   <li><a class="fs-6 text-black" href="#">Features</a></li>
@@ -492,10 +492,10 @@
                   <li><a class="fs-6 text-black" href="#">Marketplace</a></li>
                   <li><a class="fs-6 text-black" href="#">Status</a></li>
                   <li><a class="fs-6 text-black" href="#">API</a></li>
-                </div>
-              </ul>
-              <ul class="col-12 cols-lg-3 w-auto">
-                <div class="row gap-3 flex-lg-column">
+                </ul>
+              </div>
+              <div class="col-12 cols-lg-3 w-auto ">
+                <ul class="row gap-3 flex-lg-column">
                   <a href="#" class="fs-5 text-black">Discover</a>
                   <li><a class="fs-6 text-black" href="#">Partner Program</a></li>
                   <li><a class="fs-6 text-black" href="#">Get our newsletter</a></li>
@@ -503,17 +503,17 @@
                   <li><a class="fs-6 text-black" href="#">What is CRM?</a></li>
                   <li><a class="fs-6 text-black" href="#">CRM Comparison</a></li>
                   <li><a class="fs-6 text-black" href="#">Resources</a></li>
-                </div>
-              </ul>
-              <ul class="col-12 cols-lg-3 w-auto">
-                <div class="row gap-3 flex-lg-column">
+                </ul>
+              </div>
+              <div class="col-12 cols-lg-3 w-auto">
+                <ul class="row gap-3 flex-lg-column">
                   <a href="#" class="fs-5 text-black">Help Center</a>
                   <li><a class="fs-6 text-black" href="#">Community</a></li>
                   <li><a class="fs-6 text-black" href="#">Knowledge Base</a></li>
                   <li><a class="fs-6 text-black" href="#">Academy</a></li>
                   <li><a class="fs-6 text-black" href="#">Support</a></li>
-                </div>
-              </ul>
+                </ul>
+              </div>
             </div>
           </div>
           <!-- copyright -->
