Style : update div in ul

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -525,13 +525,13 @@
                   <a class="text-black-50" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
                 </h3>
               </div>
-              <ul class="col-12 col-lg-4  ">
-                <div class="row gap-3 d-lg-flex flex-column flex-lg-row flex-lg-nowrap ">
+              <div class="col-12 col-lg-4 ">
+                <ul class="row gap-3 d-lg-flex flex-column flex-lg-row flex-lg-nowrap ">
                   <li class="w-auto"><a class="fs-6 text-black" href="#">Terms of Service</a></li>
                   <li class="w-auto"><a class="fs-6 text-black" href="#">Privacy Police</a></li>
                   <li class="w-auto"><a class="fs-6 text-black" href="#">Cookie</a></li>
-                </div>
-              </ul>
+                </ul>
+              </div>
               <div class="col-12 col-lg-4 d-flex justify-content-lg-end ">
                 <i class="bi bi-globe2"></i>
                 <select class="btn p-0 fs-6 text-black" name="language" id="language">
