Style : update div in ul

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -475,7 +475,7 @@
             <div class="row row-cols-3 gap-5 gap-lg-0 justify-content-lg-between mb-lg-5">
               <div class="col-12 col-lg-3 w-auto ">
                 <ul class="row gap-3 flex-lg-column">
-                  <a href="#" class="fs-5 text-black">Company</a>
+                  <li><a href="#" class="fs-5 text-black">Company</a></li>
                   <li><a class="fs-6 text-black" href="#">About</a></li>
                   <li><a class="fs-6 text-black" href="#">Pricing</a></li>
                   <li><a class="fs-6 text-black" href="#">Jobs</a></li>
@@ -485,7 +485,7 @@
               </div>
               <div class="col-12 cols-lg-3 w-auto ">
                 <ul class="row gap-3 flex-lg-column">
-                  <a href="#" class="fs-5 text-black">Product</a>
+                  <li><a href="#" class="fs-5 text-black">Product</a></li>
                   <li><a class="fs-6 text-black" href="#">Sales software</a></li>
                   <li><a class="fs-6 text-black" href="#">Features</a></li>
                   <li><a class="fs-6 text-black" href="#">Privacy and security</a></li>
@@ -496,7 +496,7 @@
               </div>
               <div class="col-12 cols-lg-3 w-auto ">
                 <ul class="row gap-3 flex-lg-column">
-                  <a href="#" class="fs-5 text-black">Discover</a>
+                  <li><a href="#" class="fs-5 text-black">Discover</a></li>
                   <li><a class="fs-6 text-black" href="#">Partner Program</a></li>
                   <li><a class="fs-6 text-black" href="#">Get our newsletter</a></li>
                   <li><a class="fs-6 text-black" href="#">Sales Pipeline Course</a></li>
@@ -507,7 +507,7 @@
               </div>
               <div class="col-12 cols-lg-3 w-auto">
                 <ul class="row gap-3 flex-lg-column">
-                  <a href="#" class="fs-5 text-black">Help Center</a>
+                  <li><a href="#" class="fs-5 text-black">Help Center</a></li>
                   <li><a class="fs-6 text-black" href="#">Community</a></li>
                   <li><a class="fs-6 text-black" href="#">Knowledge Base</a></li>
                   <li><a class="fs-6 text-black" href="#">Academy</a></li>
