Style : update div in ul

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -376,14 +376,14 @@
                               What Is The Uptime Guarantee?
                           </button>
                       </h4>
-                      <div id="panelsStayOpen-collapsefour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
+                      <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
                           <div class="accordion-body fs-6">
                               Yoora CRM offers the most affordable, comprehensive platform to manage the entire customer journey, from generating leads, to closing deals and supporting your customers. With a full suite of CRM, sales enablement, marketing automation, and help desk/customer support capabilities, it’s all you need to manage the entire customer lifecycle. Most of our competitors offer one or two of these functions as separate products, leaving you with the headache of integrating them and increasing the overall price point.
                           </div>
                       </div>
                   </div>
                   <div class="accordion-item pt-lg-4 pb-lg-4">
-                      <h4 class="accordion-header" id="panelsStayOpen-heading">
+                      <h4 class="accordion-header" id="panelsStayOpen-headingFive">
                           <button class="accordion-button display-4 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
                               How Can I Add More Emails To My Account?
                           </button>
